--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,25 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Yutaka's Portfolio</title>
+    
+    <!-- Ensure cursor chaser is visible but not overwhelming -->
+    <style>
+      /* Allow cursor elements with high z-index to be on top */
+      .cursor-chaser-debug {
+        position: fixed !important;
+        z-index: 999999 !important;
+        pointer-events: none !important;
+      }
+      
+      /* Hide cursor on elements when hovering */
+      body.cursor-active a:hover,
+      body.cursor-active button:hover,
+      body.cursor-active input:hover,
+      body.cursor-active select:hover,
+      body.cursor-active textarea:hover {
+        cursor: none !important;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
